# BitCord

./: .gitignore  Cargo.toml  Dockerfile.node  LICENSE  PROTOCOL.md  README.md  TESTING.md  docker-compose.test.yml  package-lock.json
.github/workflows/: ci.yml  release.yml
app/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
app/scripts/: tauri-android-dev.mjs  tauri-build.mjs  tauri-dev.mjs
app/src/: main.tsx  router.tsx
app/src/components/: ChannelHeader.tsx  ChannelList.tsx  CommunityHeader.tsx  CreateChannelModal.tsx  CreateCommunityModal.tsx  DMList.tsx  JoinCommunityModal.tsx  MemberList.tsx  MessageBubble.tsx  MessageInput.tsx  MessageList.tsx  NewDMModal.tsx  PresenceIndicator.tsx  ProtectedRoute.tsx  StatusSelector.tsx  Toaster.tsx  UserProfilePopover.tsx
app/src/hooks/: useIsMobile.ts  useOsNotifications.ts  useRpc.ts  useSubscription.ts  useTauriEvent.ts  useTheme.ts
app/src/layouts/: AppLayout.tsx
app/src/lib/: logger.ts  rpc-client.ts  rpc-types.ts  statusHelpers.ts
app/src/pages/: ChatView.tsx  CommunitySettingsPage.tsx  DMConversationView.tsx  DMListPlaceholder.tsx  OnboardingPage.tsx  SettingsPage.tsx  UnlockPage.tsx
app/src/store/: communities.ts  dms.ts  identity.ts  messages.ts  presence.ts  settings.ts  toast.ts
app/src/styles/: global.css
crates/bitcord-core/: Cargo.toml
crates/bitcord-core/src/: lib.rs
crates/bitcord-core/src/api/: mod.rs  push_broadcaster.rs  types.rs  ws_handler.rs
crates/bitcord-core/src/api/event_processor/: addr.rs  channel_handler.rs  community_handler.rs  dm_handler.rs  manifest_handler.rs  mod.rs  peer.rs
crates/bitcord-core/src/api/rpc_server/: channel.rs  community.rs  dm.rs  identity.rs  message.rs  mod.rs  node.rs  subscription.rs
crates/bitcord-core/src/config/: bootstrap.rs  mod.rs
crates/bitcord-core/src/crypto/: certificate.rs  channel_keys.rs  dm.rs  encrypted_io.rs  key_exchange.rs  mod.rs
crates/bitcord-core/src/dht/: kademlia.rs  mod.rs
crates/bitcord-core/src/identity/: export.rs  keystore.rs  mod.rs
crates/bitcord-core/src/model/: channel.rs  community.rs  membership.rs  message.rs  mod.rs  network_event.rs  types.rs
crates/bitcord-core/src/network/: client.rs  connection_manager.rs  mdns.rs  mod.rs  nat.rs  node_addr.rs  peer_manager.rs  protocol.rs  tls.rs
crates/bitcord-core/src/network/network_handle/: command.rs  gossip.rs  kademlia.rs  mod.rs  push_reader.rs  reconnect.rs  types.rs
crates/bitcord-core/src/node/: dht.rs  handler.rs  init.rs  mod.rs  server.rs  store.rs
crates/bitcord-core/src/resource/: bandwidth.rs  connection_limiter.rs  metrics.rs  mod.rs  storage.rs
crates/bitcord-core/src/state/: message_log.rs  mod.rs  presence.rs  read_state.rs
crates/bitcord-core/tests/: api_integration.rs  multi_node_e2e.rs  node_integration.rs  roles_integration.rs
crates/bitcord-dht/: Cargo.toml
crates/bitcord-dht/src/: expiry.rs  lib.rs  routing.rs  store.rs
crates/bitcord-node/: Cargo.toml
crates/bitcord-node/src/: main.rs
crates/bitcord-tauri/: Cargo.toml  package.json  tauri.conf.json
crates/bitcord-tauri/capabilities/: default.json
crates/bitcord-tauri/icons/: icon.icns
crates/bitcord-tauri/src/: commands.rs  lib.rs  main.rs
proto/: push_events.md  rpc_methods.md
tests/integration/: .gitignore  package-lock.json  package.json  tsconfig.json  vitest.config.ts
tests/integration/helpers/: BitCordTestClient.ts  NodeProcess.ts  TestLogger.ts
tests/integration/scenarios/: 01-community-lifecycle.test.ts  02-message-sync.test.ts  03-channel-management.test.ts  04-invite-security.test.ts  05-dm-direct.test.ts
