[package]
name = "bitcord-dht"
version = "0.2.0"
edition = "2024"
authors = ["BitCord Contributors"]
description = "Standalone Kademlia DHT data layer for BitCord — routing table, record store, and TTL expiry."
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
redb = "2"
postcard = { version = "1", features = ["alloc"] }
