[package]
name = "bitcord-node"
version = "0.3.0"
edition = "2024"
authors = ["BitCord Contributors"]
description = "Standalone node binary for the BitCord encrypted P2P communication platform"
license = "MIT"
repository = "https://github.com/bitcord-net/BitCord"

[[bin]]
name = "bitcord-node"
path = "src/main.rs"

[dependencies]
bitcord-core = { path = "../bitcord-core" }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
rpassword = "7"
